--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ h1, h2, h3, h4, h5, h6
     font-family: 'Roboto Slab', serif;
 }
 
+div
+{
+    text-align: center;
+}
 
 .round {
 border-radius: 100px; /* Радиус скругления */
@@ -53,10 +57,20 @@ span.x4:before, i.x4:before
 	HEADER
 \*------------------------------------*/
 
+.s_back
+{
+        background-color: rgb(20, 0, 49);
+}
+
+.cool_text
+{
+        color: rgb(117, 251, 198)
+}
+
 header .container-fluid
 {
-    background-image: url('https://cdn.discordapp.com/attachments/1074000799379767437/1079859013212176504/image.png');
-    background-size: contain;
+    background-image: url('https://cdn.discordapp.com/attachments/1074000799379767437/1079865900594905198/Ajnrf.png');
+    background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
     padding-top: 36px;
@@ -65,7 +79,7 @@ header .container-fluid
 .hamburger
 {
     font-size: 2.3em;
-    color: #000;
+    color: #0cfc8a;
 }
 
 .hamburger:hover
@@ -111,7 +125,7 @@ header .container-fluid
 
 .number .container-fluid
 {
-    background-image: url('https://cdn.discordapp.com/attachments/779618565766512661/779626661724815360/New_Project_1.png');
+    background-color: rgb(20, 0, 49);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -121,7 +135,8 @@ header .container-fluid
 {
     padding-top: 3em;
     padding-bottom: 3em;
-    background-color: rgba(128, 215, 247, 0.660);
+    background-color: rgb(112, 48, 160);
+;
 }
 
 .opaline h1,
@@ -133,6 +148,11 @@ header .container-fluid
 .opaline p
 {
     color: #FFFFFF;
+}
+
+i
+{
+            color: rgb(117, 251, 198)
 }
 
 .opaline .boxes
@@ -150,7 +170,7 @@ header .container-fluid
 
 .story .container-fluid
 {
-    background-image: url('https://cdn.discordapp.com/attachments/779618565766512661/779626661724815360/New_Project_1.png');
+    background-color: rgb(20, 0, 49);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -158,7 +178,7 @@ header .container-fluid
 
 .gallery
 {
-    background-color: #dddddd;
+    background-color: rgb(20, 0, 49);
 }
 
 .prefooter .container-fluid
@@ -179,7 +199,7 @@ header .container-fluid
 .prefooter h6,
 .prefooter p
 {
-    color: #FFFFFF;
+    background-color: rgb(20, 0, 49);
 }
 
 /*------------------------------------*\
@@ -188,7 +208,7 @@ header .container-fluid
 
 footer
 {
-    background-color: rgba(36, 50, 59, 1);
+    background-color: rgb(20, 0, 49);
     padding-top: 2em;
     padding-bottom: 1.2em;
 }
