--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ span.x4:before, i.x4:before
 
 header .container-fluid
 {
-    background-image: url('https://cdn.discordapp.com/attachments/1074000799379767437/1079865900594905198/Ajnrf.png');
+    background-image: url('https://media.discordapp.net/attachments/1074032256131281057/1090792643614744596/image.png?width=1920&height=1080');
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
